--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -14,6 +14,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="LIVE : "
             android:id="@+id/tv_name"
+            android:textSize="16dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
