--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,17 +50,20 @@
             android:background="#c9000000"
             android:layout_weight="1"
             android:layout_alignParentBottom="true"
-            android:id="@+id/linearMenu" >
+            android:gravity="center">
 
             <HorizontalScrollView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:id="@+id/horizontalScrollView">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:layout_gravity="center">
+                    android:id="@+id/linearMenu"
+                    android:layout_gravity="left"
+                    android:gravity="center">
                     <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
