--- a/app/src/main/res/layout/stream_fragment.xml
+++ b/app/src/main/res/layout/stream_fragment.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <VideoView
+    <io.vov.vitamio.widget.VideoView
         android:id="@+id/VideoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
