--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="#ffff393b"
+    android:layout_height="match_parent" android:background="@drawable/seedapp_bg"
     android:gravity="center_vertical"
     tools:context="${relativePackage}.${activityClass}">
 
