--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/imageView5"
-            android:background="#e9031f"
+            android:background="@drawable/shape_bg_header"
             android:layout_weight="1"
             android:src="@drawable/seed_fm_logo" />
 
