--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -59,11 +59,11 @@
                         android:layout_marginTop="4dp"
                         android:layout_marginBottom="4dp"
                         android:textSize="16dp"
-                        android:text="Now Playing : "
+                        android:text="Next : "
                         android:textColor="@android:color/white"
                         android:layout_marginLeft="5dp"
-                        android:gravity="center"
-                        android:id="@+id/now_playing" />
+                        android:id="@+id/textNext"
+                        android:gravity="center" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
@@ -76,7 +76,7 @@
                         android:focusableInTouchMode="true"
                         android:scrollHorizontally="true"
                         android:text="คิดถึง - Bodyslam"
-                        android:id="@+id/textNowPlaying"
+                        android:id="@+id/textNameSong"
                         android:layout_centerHorizontal="true"
                         android:textColor="@android:color/white"
                         android:singleLine="true"
@@ -260,13 +260,28 @@
                     android:scaleType="centerCrop"/>
 
                 <TextView
-                    android:layout_width="250dp"
+                    android:layout_width="140dp"
                     android:layout_height="65dp"
+                    android:text="Now Playing: "
+                    android:id="@+id/textView3"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@android:color/black"
+                    android:textSize="18dp"
+                    android:textIsSelectable="false"
+                    android:paddingTop="25dp"
+                    android:background="@drawable/big_bar_1px"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                     />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="65dp"
+                    android:maxWidth="150dp"
+                    android:minWidth="100dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="ม่ต่างกัน - 25 Hours"
-                    android:textSize="20dp"
+                    android:textSize="18dp"
                     android:background="@drawable/big_bar_1px"
-                    android:id="@+id/textNameSong"
+                    android:id="@+id/textNowPlaying"
                     android:textColor="@android:color/black"
                     android:ellipsize="marquee"
                     android:marqueeRepeatLimit ="marquee_forever"
@@ -276,7 +291,7 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:freezesText="true"
-                    android:paddingLeft="80dp"
+                    android:paddingLeft="5dp"
                     android:gravity="center_vertical" />
 
                 <ImageView
@@ -287,27 +302,27 @@
 
             </LinearLayout>
 
-            <FrameLayout
-                android:layout_width="200dp"
-                android:layout_height="65dp"
-                android:layout_below="@+id/viewseparate"
-                android:layout_alignLeft="@+id/linearLayout2"
-                android:layout_alignStart="@+id/linearLayout2">
+            <!--<FrameLayout-->
+                <!--android:layout_width="200dp"-->
+                <!--android:layout_height="65dp"-->
+                <!--android:layout_below="@+id/viewseparate"-->
+                <!--android:layout_alignLeft="@+id/linearLayout2"-->
+                <!--android:layout_alignStart="@+id/linearLayout2">-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Next :"
-                    android:id="@+id/textView3"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@android:color/black"
-                    android:textSize="20dp"
-                    android:textIsSelectable="false"
-                    android:paddingTop="5dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:paddingLeft="20dp"
-                    android:layout_marginLeft="10dp" />
-            </FrameLayout>
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Now Playing: "-->
+                    <!--android:id="@+id/textView3"-->
+                    <!--android:layout_gravity="center_vertical"-->
+                    <!--android:textColor="@android:color/black"-->
+                    <!--android:textSize="18dp"-->
+                    <!--android:textIsSelectable="false"-->
+                    <!--android:paddingTop="3dp"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                    <!--android:paddingLeft="20dp"-->
+                    <!--android:layout_marginLeft="10dp" />-->
+            <!--</FrameLayout>-->
 
             <FrameLayout
                 android:layout_width="20dp"
