--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -61,9 +61,9 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2.2"
-            android:background="#000">
+            android:layout_height="wrap_content"
+            android:background="#000"
+            android:gravity="center_horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -71,7 +71,7 @@
                 android:text="New Text"
                 android:textColor="#FFF"
                 android:id="@+id/textView6"
-                android:textSize="12dp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -79,7 +79,7 @@
                 android:text="New Text"
                 android:id="@+id/textView7"
                 android:textColor="#FFF"
-                android:textSize="12dp" />
+                android:textSize="14dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -87,11 +87,20 @@
                 android:text="New Text"
                 android:textColor="#FFF"
                 android:id="@+id/textView8"
-                android:textSize="12dp" />
+                android:textSize="14dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Lyrics"
+                android:id="@+id/tv_lyrics"
+                android:textColor="#FFF"
+                android:layout_gravity="center_horizontal" />
         </LinearLayout>
 
         <ScrollView
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="14"
             android:background="#000"
@@ -129,24 +138,16 @@
                     <!--android:id="@+id/compose"-->
                     <!--android:layout_gravity="center_horizontal" />-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Lyrics"
-                    android:id="@+id/tv_lyrics"
-                    android:textColor="#FFF"
-                    android:layout_gravity="center_horizontal" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+            <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text=" "
-                    android:textSize="12dp"
+                    android:textSize="14dp"
                     android:textColor="#FFF"
                     android:id="@+id/lyrics"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_horizontal" />
             </LinearLayout>
        </ScrollView>
     </LinearLayout>
